--- a/LibriVox/StoryBoard/Profile.storyboard
+++ b/LibriVox/StoryBoard/Profile.storyboard
@@ -415,9 +415,7 @@ asdadnasd</string>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="person" catalog="system" selectedImage="person.fill" id="FNv-cg-jwz"/>
-                    <navigationItem key="navigationItem" title="Settings" prompt="k" id="7xw-bM-0o2">
-                        <barButtonItem key="backBarButtonItem" title="oiiii" id="9hV-4U-wUI"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Settings" id="7xw-bM-0o2"/>
                     <connections>
                         <outlet property="logoutBtn" destination="mTh-7F-39H" id="LSo-PU-Hal"/>
                         <outlet property="nameUser" destination="59P-eN-9Ge" id="sur-Es-dV4"/>
@@ -438,7 +436,7 @@ asdadnasd</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First / Last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a6g-77-7mQ" customClass="BlueShadowUITextField" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="24" y="351" width="345" height="31"/>
+                                <rect key="frame" x="24" y="356" width="345" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="fES-Cc-7AA"/>
                                 </constraints>
@@ -446,7 +444,7 @@ asdadnasd</string>
                                 <textInputTraits key="textInputTraits" textContentType="name"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8ET-f4-jfd" customClass="BlueShadowUITextField" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="24" y="445" width="345" height="31"/>
+                                <rect key="frame" x="24" y="450" width="345" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="rPD-wb-jR3"/>
                                 </constraints>
@@ -454,7 +452,7 @@ asdadnasd</string>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5YG-ci-nMK" customClass="BlueShadowUITextField" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="24" y="398" width="345" height="31"/>
+                                <rect key="frame" x="24" y="403" width="345" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="Cqp-cB-yn8"/>
                                 </constraints>
@@ -462,7 +460,7 @@ asdadnasd</string>
                                 <textInputTraits key="textInputTraits" textContentType="username"/>
                             </textField>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wys-l8-HH2" customClass="CircularImageView" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="121.66666666666669" y="161" width="150" height="150"/>
+                                <rect key="frame" x="121.66666666666669" y="166" width="150" height="150"/>
                                 <color key="backgroundColor" name="Gren Tone"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="7nI-1e-kn3"/>
@@ -470,7 +468,7 @@ asdadnasd</string>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VBG-ZL-MpH">
-                                <rect key="frame" x="24" y="506.00000000000006" width="345" height="32.666666666666686"/>
+                                <rect key="frame" x="24" y="511.00000000000006" width="345" height="32.666666666666686"/>
                                 <color key="tintColor" name="Green Tone"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" cornerStyle="fixed">
@@ -481,7 +479,7 @@ asdadnasd</string>
                                         <fragment content="Confirm">
                                             <attributes>
                                                 <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <font key="NSFont" size="16" name="Nunito-SemiBold"/>
+                                                <font key="NSFont" metaFont="system" size="16"/>
                                                 <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                             </attributes>
                                         </fragment>
@@ -492,20 +490,20 @@ asdadnasd</string>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aHV-oI-6lq">
-                                <rect key="frame" x="24" y="578.66666666666663" width="196.66666666666666" height="28"/>
+                                <rect key="frame" x="24" y="583.66666666666663" width="200.66666666666666" height="33"/>
                                 <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odd-vy-C2n">
-                                <rect key="frame" x="24" y="614.66666666666663" width="345" height="52.666666666666629"/>
+                                <rect key="frame" x="24" y="624.66666666666663" width="345" height="61.666666666666629"/>
                                 <string key="text">You will receive an email with a link to update your password.                                                                                                             Don't forget to check the Spam Box!</string>
                                 <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JeC-V7-q7r">
-                                <rect key="frame" x="24" y="697.33333333333337" width="345" height="32.666666666666629"/>
+                                <rect key="frame" x="24" y="716.33333333333337" width="345" height="32.666666666666629"/>
                                 <color key="tintColor" name="Green Tone"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" cornerStyle="fixed">
@@ -516,7 +514,7 @@ asdadnasd</string>
                                         <fragment content="Send Email">
                                             <attributes>
                                                 <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <font key="NSFont" size="16" name="Nunito-SemiBold"/>
+                                                <font key="NSFont" metaFont="system" size="16"/>
                                                 <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                             </attributes>
                                         </fragment>
@@ -527,7 +525,7 @@ asdadnasd</string>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Update Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k2D-ld-urx">
-                                <rect key="frame" x="24" y="103" width="153.66666666666666" height="28"/>
+                                <rect key="frame" x="24" y="103" width="162" height="33"/>
                                 <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -623,10 +621,10 @@ asdadnasd</string>
             <size key="intrinsicContentSize" width="92.333333333333329" height="34"/>
         </designable>
         <designable name="8ET-f4-jfd">
-            <size key="intrinsicContentSize" width="62.333333333333336" height="34"/>
+            <size key="intrinsicContentSize" width="63" height="34"/>
         </designable>
         <designable name="a6g-77-7mQ">
-            <size key="intrinsicContentSize" width="133.33333333333334" height="34"/>
+            <size key="intrinsicContentSize" width="132" height="34"/>
         </designable>
     </designables>
     <resources>
