--- a/LibriVox/StoryBoard/Library.storyboard
+++ b/LibriVox/StoryBoard/Library.storyboard
@@ -320,14 +320,17 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeG-1D-zCM">
-                                            <rect key="frame" x="358" y="-2" width="35" height="34.666666666666664"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeG-1D-zCM" customClass="FavoritesToggleBtn" customModule="LibriVox" customModuleProvider="target">
+                                            <rect key="frame" x="363" y="3" width="25" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="25" id="g8U-6Q-O4i"/>
+                                                <constraint firstAttribute="width" constant="25" id="hfn-R9-sw7"/>
+                                            </constraints>
                                             <color key="tintColor" name="AccentColor"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                            <state key="normal" image="star" catalog="system"/>
-                                            <buttonConfiguration key="configuration" style="plain">
+                                            <state key="normal">
                                                 <imageReference key="image" image="star" catalog="system" symbolScale="medium"/>
-                                            </buttonConfiguration>
+                                            </state>
                                         </button>
                                     </subviews>
                                     <constraints>
@@ -346,7 +349,6 @@
                                         <constraint firstItem="O1I-E8-xzJ" firstAttribute="top" secondItem="soE-xL-Jjf" secondAttribute="top" id="v4Y-ZI-i4a"/>
                                         <constraint firstAttribute="bottom" secondItem="iib-PH-hrF" secondAttribute="bottom" constant="15" id="vC7-9k-shM"/>
                                         <constraint firstItem="oHD-S1-uK2" firstAttribute="top" secondItem="O1I-E8-xzJ" secondAttribute="top" constant="5" id="wVH-dO-hHL"/>
-                                        <constraint firstAttribute="trailing" secondItem="eeG-1D-zCM" secondAttribute="trailing" id="xbm-Wr-W3v"/>
                                         <constraint firstAttribute="bottom" secondItem="5Lf-Ln-QkG" secondAttribute="bottom" constant="10" id="zjP-cc-0NI"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -479,7 +481,7 @@
         <image name="play" width="512" height="512"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <namedColor name="AccentColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Gren Tone">
             <color red="0.6119999885559082" green="0.85500001907348633" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
