--- a/LibriVox/StoryBoard/Library.storyboard
+++ b/LibriVox/StoryBoard/Library.storyboard
@@ -209,17 +209,7 @@
                                     <outlet property="durationBook" destination="pwH-ag-zxo" id="C6g-Xs-58p"/>
                                     <outlet property="imgBook" destination="vsD-d5-zyM" id="aFd-FW-Fzw"/>
                                     <outlet property="titleBook" destination="9JA-iJ-UCe" id="yPJ-DT-cIK"/>
-                                </connections>
-                            </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="29i-Qp-jwX">
-                                <rect key="frame" x="0.0" y="195" width="393" height="145"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="29i-Qp-jwX" id="PnH-L0-qrn">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="145"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="c0e-yd-uVQ" kind="show" trigger="accessoryAction" id="ddJ-9B-NaG"/>
+                                    <segue destination="c0e-yd-uVQ" kind="show" identifier="showDetailsBook" id="HzN-ii-n4s"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -241,7 +231,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V0J-JA-rWy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2718" y="382"/>
+            <point key="canvasLocation" x="3292" y="499"/>
         </scene>
         <!--Container PagesVC-->
         <scene sceneID="2n1-HS-pGy">
@@ -270,58 +260,58 @@
         <scene sceneID="e1T-7l-2CY">
             <objects>
                 <tableViewController storyboardIdentifier="ToStartVC" modalTransitionStyle="flipHorizontal" id="NUo-Ud-Q3n" customClass="FavoritesVC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="125" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="jRz-Ic-JBy">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="145" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="jRz-Ic-JBy">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FavoritesCellTVC" rowHeight="125" id="w6k-aj-Hfz" customClass="FavoritesCellTVC" customModule="LibriVox" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="50" width="393" height="125"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FavoritesCellTVC" rowHeight="145" id="w6k-aj-Hfz" customClass="FavoritesCellTVC" customModule="LibriVox" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="145"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w6k-aj-Hfz" id="soE-xL-Jjf">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="125"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="145"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O1I-E8-xzJ" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="77" height="125"/>
+                                            <rect key="frame" x="0.0" y="10" width="77" height="125"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="77" id="bfx-C4-03f"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Percy Jackson: The Lightning Thief" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oHD-S1-uK2">
-                                            <rect key="frame" x="87" y="5" width="256" height="20.666666666666668"/>
+                                            <rect key="frame" x="87" y="15.000000000000002" width="256" height="20.666666666666671"/>
                                             <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration: 08:40:31" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Uz-sa-4Mv">
-                                            <rect key="frame" x="87" y="72" width="107" height="18"/>
+                                            <rect key="frame" x="87" y="92" width="107" height="18"/>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre: Action, Adventure" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iib-PH-hrF">
-                                            <rect key="frame" x="87" y="92" width="142" height="18"/>
+                                            <rect key="frame" x="87" y="112" width="142" height="18"/>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play" translatesAutoresizingMaskIntoConstraints="NO" id="5Lf-Ln-QkG">
-                                            <rect key="frame" x="358" y="80" width="35" height="35"/>
+                                            <rect key="frame" x="358" y="100" width="35" height="35"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="35" id="TTq-kY-7cQ"/>
                                                 <constraint firstAttribute="width" constant="35" id="o3j-uj-EZZ"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author: Rick Riordan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvR-S9-KMM">
-                                            <rect key="frame" x="87" y="52" width="115.33333333333331" height="18"/>
+                                            <rect key="frame" x="87" y="72" width="115.33333333333331" height="18"/>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeG-1D-zCM" customClass="FavoritesToggleBtn" customModule="LibriVox" customModuleProvider="target">
-                                            <rect key="frame" x="363" y="3" width="25" height="25"/>
+                                            <rect key="frame" x="363" y="13" width="25" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="g8U-6Q-O4i"/>
                                                 <constraint firstAttribute="width" constant="25" id="hfn-R9-sw7"/>
@@ -342,11 +332,11 @@
                                         <constraint firstItem="iib-PH-hrF" firstAttribute="top" secondItem="0Uz-sa-4Mv" secondAttribute="bottom" constant="2" id="Oar-Ti-l9z"/>
                                         <constraint firstItem="xvR-S9-KMM" firstAttribute="leading" secondItem="O1I-E8-xzJ" secondAttribute="trailing" constant="10" id="RTS-b4-eYv"/>
                                         <constraint firstItem="0Uz-sa-4Mv" firstAttribute="top" secondItem="xvR-S9-KMM" secondAttribute="bottom" constant="2" id="TGH-8h-dam"/>
-                                        <constraint firstAttribute="bottom" secondItem="O1I-E8-xzJ" secondAttribute="bottom" id="ViK-rM-Akr"/>
+                                        <constraint firstAttribute="bottom" secondItem="O1I-E8-xzJ" secondAttribute="bottom" constant="10" id="ViK-rM-Akr"/>
                                         <constraint firstItem="0Uz-sa-4Mv" firstAttribute="leading" secondItem="O1I-E8-xzJ" secondAttribute="trailing" constant="10" id="i1j-TU-mmu"/>
                                         <constraint firstAttribute="trailing" secondItem="oHD-S1-uK2" secondAttribute="trailing" constant="50" id="if5-Ur-Kam"/>
                                         <constraint firstItem="eeG-1D-zCM" firstAttribute="centerY" secondItem="oHD-S1-uK2" secondAttribute="centerY" id="sLs-7s-0Gd"/>
-                                        <constraint firstItem="O1I-E8-xzJ" firstAttribute="top" secondItem="soE-xL-Jjf" secondAttribute="top" id="v4Y-ZI-i4a"/>
+                                        <constraint firstItem="O1I-E8-xzJ" firstAttribute="top" secondItem="soE-xL-Jjf" secondAttribute="top" constant="10" id="v4Y-ZI-i4a"/>
                                         <constraint firstAttribute="bottom" secondItem="iib-PH-hrF" secondAttribute="bottom" constant="15" id="vC7-9k-shM"/>
                                         <constraint firstItem="oHD-S1-uK2" firstAttribute="top" secondItem="O1I-E8-xzJ" secondAttribute="top" constant="5" id="wVH-dO-hHL"/>
                                         <constraint firstAttribute="bottom" secondItem="5Lf-Ln-QkG" secondAttribute="bottom" constant="10" id="zjP-cc-0NI"/>
@@ -358,15 +348,8 @@
                                     <outlet property="genreBook" destination="iib-PH-hrF" id="joZ-MY-MOg"/>
                                     <outlet property="imgBook" destination="O1I-E8-xzJ" id="Wug-Kd-3IL"/>
                                     <outlet property="titleBook" destination="oHD-S1-uK2" id="ZC2-4c-P2e"/>
+                                    <segue destination="c0e-yd-uVQ" kind="show" identifier="showDetailsBook" id="6q9-2R-TJS"/>
                                 </connections>
-                            </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="1Nz-93-vwu">
-                                <rect key="frame" x="0.0" y="175" width="393" height="125"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1Nz-93-vwu" id="7Xu-1o-l8v">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="125"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -442,6 +425,7 @@
                                 <connections>
                                     <outlet property="imageBook" destination="96F-Gt-DxQ" id="t9W-xg-8zI"/>
                                     <outlet property="titleBook" destination="DBd-US-yq9" id="bVn-t8-JYp"/>
+                                    <segue destination="c0e-yd-uVQ" kind="show" identifier="showDetailsBook" id="cWc-Cy-ca3"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -475,6 +459,9 @@
             <point key="canvasLocation" x="983.96946564885491" y="-2.1126760563380285"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="6q9-2R-TJS"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="books.vertical" catalog="system" width="128" height="107"/>
         <image name="books.vertical.fill" catalog="system" width="128" height="110"/>
